# mini-project---chat-bot

./: .env.example  .gitignore  AGENTS.md  PRD_면접.md  PRD_자소서.md  README.md  TOOL_4_README.md  day8_2_login.py  demo_app.py  finance_job_recommend_prd.md  pyproject.toml  render.yaml  requirements.txt  면접생성툴.py  통합_PRD.md
app/: __init__.py  api.py  finance_job_recommend.py  main.py
chroma_db/: chroma.sqlite3
core/: __init__.py  base.py  llm.py  schema.py  vectorstore.py
data/raw/: certs.json  language_tests.json
ingest/: __init__.py
ingest/certs/: __init__.py  build_certs_data.py  index_certs.py
scripts/: tts_try_voices.py
tests/: test_core.py  test_schedule_ui.py  test_session_isolation.py  test_spec_recommend.py
tools/: __init__.py  cover_letter.py  interview.py  recommend_job.py  spec_recommend.py
vtuber/: .env.example  index.html  package-lock.json  package.json
vtuber/src/: chat.ts  main.ts  style.css
