[project]
name = "mini-project-chat-bot-tool-4"
version = "0.1.0"
description = "취업준비 챗봇 Tool 4 - 자격증 추천 및 시험 일정 안내"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "chromadb>=1.0,<2",
  "gradio>=5.49,<7",
  "langchain>=0.3,<2",
  "langchain-chroma>=0.2,<2",
  "langchain-openai>=0.3,<2",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

