[project]
name = "mini-project-chat-bot"
version = "0.1.0"
description = "4개 Tool을 통합하는 Gradio 기반 취업준비 도움 챗봇"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "azure-cognitiveservices-speech>=1.50.0",
  "chromadb>=1.0,<2",
  "fastapi>=0.115,<1",
  "gradio>=5.49,<7",
  "langchain>=0.3,<2",
  "langchain-chroma>=0.2,<2",
  "langchain-openai>=0.3,<2",
  "openai>=1.40,<3",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "uvicorn>=0.30,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "beautifulsoup4>=4.12,<5",
  "requests>=2.32,<3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
